--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
 
     <div id="canto_gregoriano" class="container" style="display: none;">
+        <img src="<img src="https://github.com/marmus25/musica-medieval/blob/main/imagen.png?raw=true" alt="Descripción de la imagen" width="500">" alt="Descripción de la imagen" width="500">
         <h2>📜 Canto Gregoriano</h2>
         <p>El canto gregoriano es una forma de música litúrgica monódica, sin acompañamiento instrumental, utilizada en la Iglesia Católica desde el siglo VI.</p>
         <p>Características principales:
