--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>🎼 Música Medieval - Historia Completa</h1>
         <p>Explora en profundidad la evolución de la música en la Edad Media.</p>
         <a href="#canto_gregoriano" class="button">Canto Gregoriano</a>
-        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp"alt="Descripción de la imagen" width="500">" alt="Descripción de la imagen" width="500">
+        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Descripción de la imagen" width="500">
         <a href="#musica_profana" class="button">Música Profana</a>
         <a href="#polifonia" class="button">Polifonía</a>
         <a href="#mujeres_musica" class="button">Mujeres en la Música</a>
