--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         <h1>🎼 Música Medieval - Historia Completa</h1>
         <p>Explora en profundidad la evolución de la música en la Edad Media.</p>
         <a href="#canto_gregoriano" class="button">Canto Gregoriano</a>
-        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Descripción de la imagen" width="500">
         <a href="#musica_profana" class="button">Música Profana</a>
         <a href="#polifonia" class="button">Polifonía</a>
         <a href="#mujeres_musica" class="button">Mujeres en la Música</a>
@@ -53,7 +52,7 @@
     <div id="canto_gregoriano" class="container" style="display: none;">
        
         <h2>📜 Canto Gregoriano</h2>
-        <img src="https://github.com/marmus25/musica-medieval/blob/88cfe55ddc5c57c14d5cf912a0641a38cab0403a/CANTO%20GREGORIANO.webp"alt="Descripción de la imagen" width="500">" alt="Descripción de la imagen" width="500">
+       <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp"
         <p>El canto gregoriano es una forma de música litúrgica monódica, sin acompañamiento instrumental, utilizada en la Iglesia Católica desde el siglo VI.</p>
         <p>Características principales:
         <ul>
