--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
        
         <h2>📜 Canto Gregoriano</h2>
        <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <div style="text-align: center;">
     <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Descripción de la imagen" width="500">
         <p>El canto gregoriano es una forma de música litúrgica monódica, sin acompañamiento instrumental, utilizada en la Iglesia Católica desde el siglo VI.</p>
         <p>Características principales:
