--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <h2>📜 Canto Gregoriano</h2>
         <p>El canto gregoriano es una forma de música litúrgica monódica, utilizada en la Iglesia Católica desde el siglo VI.</p>
 
-        <!-- Espacio para Imagen -->
+        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="500">
+
         <div class="placeholder">Espacio para la imagen del Canto Gregoriano</div>
 
         <!-- Espacio para Audio -->
