--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
         <h2>📜 Canto Gregoriano</h2>
         <p>El canto gregoriano es una forma de música litúrgica monódica, utilizada en la Iglesia Católica desde el siglo VI.</p>
 
-        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="500">
-
-        <div class="placeholder">Espacio para la imagen del Canto Gregoriano</div>
+        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="400">
 
         <!-- Espacio para Audio -->
-        <div class="placeholder">Espacio para el audio del Canto Gregoriano</div>
+      <audio controls>
+    <source src="https://github.com/marmus25/musica-medieval/blob/68cd084b48e6c9bdc48659193326ef77073d8df7/02%20Stabat%20Mater.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
+</audio>
+
 
         <a href="#inicio" class="button" onclick="showSection('inicio')">Regresar</a>
     </div>
