--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <h2>📜 Canto Gregoriano</h2>
         <p>El canto gregoriano es una forma de música litúrgica monódica, utilizada en la Iglesia Católica desde el siglo VI.</p>
 
-        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="200">
+        <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="250">
 
         <!-- Espacio para Audio -->
       <audio controls>
-    <source src="https://github.com/marmus25/musica-medieval/blob/4add4c7040ca00dfa3bcca2a57f3504b7c59526b/02%20Stabat%20Mater.mp3" type="audio/mpeg">
+    <source src="https://github.com/marmus25/musica-medieval/02 Stabat Mater.mp3?raw=true" type="audio/mpeg">
     Tu navegador no soporta audio.
 </audio>
 
