--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- Espacio para Audio -->
       <audio controls>
-    <source src="https://github.com/marmus25/musica-medieval/02 Stabat Mater.mp3?raw=true" type="audio/mpeg">
+    <source src="https://raw.githubusercontent.com/marmus25/musica-medieval/02 Stabat Mater.mp3" type="audio/mpeg">
     Tu navegador no soporta audio.
 </audio>
 
