--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 
     <div id="canto_gregoriano" class="container" style="display: none;">
         <h2>📜 Canto Gregoriano</h2>
-        <p>El canto gregoriano es una forma de música litúrgica monódica, utilizada en la Iglesia Católica desde el siglo VI.</p>
-        <p> El ritmo es libre, reducido a una especie de línea ondulante y muy flexible..</p>
+        <p>-El canto gregoriano es una forma de música litúrgica monódica, utilizada en la Iglesia Católica desde el siglo VI.</p>
+        <p>-El ritmo es libre, reducido a una especie de línea ondulante y muy flexible..</p>
+        <p>-Es monódico y a capella, es decir, a una sola voz y sin acompañamiento de instrumentos...</p>
+        <p>-Se canta en latín y está determinado por la forma de este idioma; es el canto de la Iglesia 
+Católica Romana....</p>
 
         <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="250">
 
