--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
         <p>-El ritmo es libre, reducido a una especie de línea ondulante y muy flexible..</p>
         <p>-Es monódico y a capella, es decir, a una sola voz y sin acompañamiento de instrumentos...</p>
         <p>-Se canta en latín y está determinado por la forma de este idioma; es el canto de la Iglesia 
+        <p>-Es una música ligada a un texto religioso y sin el cual no tiene sentido
+        <p>-El Gregoriano se escribe en tetragramas (posteriormente en notación cuadrada) y con unos
+signos llamados neumas, como una especie de guía para recordar.
+ El Gregoriano es una música que pretende aproximar el alma del creyente a Dios y es fruto
+de una sociedad religiosa convencida de que el hombre vive para Dios y para la eternidad.
+ A partir de Cantate Domine, es salmódico ya que introduce el salmo.
 Católica Romana....</p>
 
         <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="250">
