--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <p>-El canto gregoriano es una forma de música litúrgica monódica, utilizada en la Iglesia Católica desde el siglo VI.</p>
         <p>-El ritmo es libre, reducido a una especie de línea ondulante y muy flexible..</p>
         <p>-Es monódico y a capella, es decir, a una sola voz y sin acompañamiento de instrumentos...</p>
+         <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/GREGORIANO%202.webp" alt="Canto Gregoriano" width="250">
         <p>-Se canta en latín y está determinado por la forma de este idioma; es el canto de la Iglesia 
         <p>-Es una música ligada a un texto religioso y sin el cual no tiene sentido
         <p>-El Gregoriano se escribe en tetragramas (posteriormente en notación cuadrada) y con unos
