--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ Católica Romana....</p>
 
         <!-- Espacio para Audio -->
       <audio controls>
-    <source src="https://drive.google.com/file/d/1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ/" type="audio/mpeg">
+    <source src="https://drive.google.com/uc?export=download&id=1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ
+" type="audio/mpeg">
 </audio>
 
 
