--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@ Católica Romana....</p>
 
         <!-- Espacio para Audio -->
       <audio controls>
-    <source src="https://drive.google.com/uc?export=download&id=1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ
+    <source src="https://drive.google.com/file/d/1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ/view?usp=drive_link
 " type="audio/mpeg">
+    Tu navegador no soporta audio.
+</audio>
+
 </audio>
 
 
