--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ Católica Romana....</p>
       <audio controls>
     <source src="https://drive.google.com/file/d/1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ/view?usp=drive_link
 " type="audio/mpeg">
+          <iframe src="https://drive.google.com/file/d/1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ/preview" width="300" height="50" allow="autoplay"></iframe>
+
     Tu navegador no soporta audio.
 </audio>
 
