--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Católica Romana....</p>
         <img src="https://raw.githubusercontent.com/marmus25/musica-medieval/refs/heads/main/CANTO%20GREGORIANO.webp" alt="Canto Gregoriano" width="250">
 
         <!-- Espacio para Audio -->
-   <iframe src="https://drive.google.com/file/d/1zjJdqPlfAZnvSDCSA9jp8kNaYkAGuKTZ/preview" width="250" height="50" allow="autoplay"></iframe>
+   <iframe src="https://drive.google.com/file/d/https://drive.google.com/file/d/1xBSNipQ663TIxvJYy7tS_qRYfKnqIu6X/preview" width="250" height="50" allow="autoplay"></iframe>
 
 
     
